# docs/swagger.json
@@ -454,88 +454,6 @@
                 }
             }
         },
-        "/api/educations-pendonor": {
-            "get": {
-                "description": "Get Education Pendonor",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Education"
-                ],
-                "summary": "Get Education Pendonor",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handler.EducationResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/educations/pencari-donor": {
-            "get": {
-                "description": "Get Education Pencari Donor",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Education"
-                ],
-                "summary": "Get Education Pencari Donor",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handler.EducationResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/history": {
             "get": {
                 "description": "Retrieves a list of history records for a given user ID.",
@@ -723,13 +641,11 @@
                 "summary": "Get next donation date",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "User ID",
                         "name": "user_id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -823,6 +739,9 @@
                 "blood_type": {
                     "type": "string"
                 },
+                "coin": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -830,6 +749,9 @@
                     "type": "string"
                 },
                 "email": {
+                    "type": "string"
+                },
+                "fcm_token": {
                     "type": "string"
                 },
                 "gender": {
@@ -852,6 +774,9 @@
                 },
                 "role": {
                     "type": "string"
+                },
+                "total_donation": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
@@ -887,7 +812,7 @@
         "handler.GoogleLoginRequest": {
             "type": "object",
             "properties": {
-                "code": {
+                "token": {
                     "type": "string"
                 }
             }
@@ -922,6 +847,9 @@
             "type": "object",
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "fcm_token": {
                     "type": "string"
                 },
                 "password": {
